--- a/doc/source/algorithms/cmaes.ipynb
+++ b/doc/source/algorithms/cmaes.ipynb
@@ -51,9 +51,11 @@
      "output_type": "stream",
      "text": [
       "Best solution found: \n",
-      "X = [0.49999994 0.5        0.50000001 0.50000003 0.49999996 0.49999994\n",
-      " 0.5        0.49999999 0.49999995 0.50000004]\n",
-      "F = [1.36882511e-14]\n"
+      "X = [0.49999997 0.50000003 0.5        0.50000003 0.5        0.49999998\n",
+      " 0.50000004 0.50000002 0.50000004 0.5       ]\n",
+      "F = [0.49999997 0.50000003 0.5        0.50000003 0.5        0.49999998\n",
+      " 0.50000004 0.50000002 0.50000004 0.5       ]\n",
+      "CV= [0.]\n"
      ]
     }
    ],
@@ -71,7 +73,7 @@
     "               seed=1,\n",
     "               verbose=False)\n",
     "\n",
-    "print(\"Best solution found: \\nX = %s\\nF = %s\" % (res.X, res.F))"
+    "print(f\"Best solution found: \\nX = {res.X}\\nF = {res.X}\\nCV= {res.CV}\")"
    ]
   },
   {
@@ -93,20 +95,20 @@
       "==============================================================================\n",
       "n_gen |  n_eval |     fopt     |    sigma     | min std  | max std  |   axis  \n",
       "==============================================================================\n",
-      "    1 |      10 |  0.693281236 |  0.500000000 |  0.50000 |  0.50002 |  1.00005\n",
-      "    2 |      20 |  0.510635963 |  0.467010358 |  0.44671 |  0.47745 |  1.19477\n",
-      "    3 |      30 |  0.510635963 |  0.436791171 |  0.40501 |  0.44470 |  1.24024\n",
-      "    4 |      40 |  0.510635963 |  0.422510052 |  0.38513 |  0.43316 |  1.28711\n",
-      "    5 |      50 |  0.510635963 |  0.414590098 |  0.37047 |  0.42855 |  1.35280\n",
-      "    6 |      60 |  0.499588048 |  0.399593307 |  0.35758 |  0.42099 |  1.42064\n",
-      "    7 |      70 |  0.499588048 |  0.377241108 |  0.32669 |  0.41240 |  1.57503\n",
-      "    8 |      80 |  0.499588048 |  0.360917895 |  0.30394 |  0.39292 |  1.59267\n",
-      "    9 |      90 |  0.452070968 |  0.352635143 |  0.29372 |  0.37350 |  1.64823\n",
-      "   10 |     100 |  0.435363577 |  0.361760636 |  0.29683 |  0.38860 |  1.75806\n",
+      "    1 |      60 |  0.229388258 |  0.500000000 |  0.50000 |  0.50002 |  1.00005\n",
+      "    2 |      70 |  0.229388258 |  0.472048869 |  0.45411 |  0.48055 |  1.16540\n",
+      "    3 |      80 |  0.229388258 |  0.443735415 |  0.40077 |  0.45473 |  1.27878\n",
+      "    4 |      90 |  0.229388258 |  0.430768024 |  0.37538 |  0.45674 |  1.31680\n",
+      "    5 |     100 |  0.229388258 |  0.416239839 |  0.36077 |  0.43775 |  1.31471\n",
+      "    6 |     110 |  0.229388258 |  0.385521255 |  0.33371 |  0.40067 |  1.31705\n",
+      "    7 |     120 |  0.229388258 |  0.362530665 |  0.30712 |  0.37591 |  1.36952\n",
+      "    8 |     130 |  0.229388258 |  0.362002271 |  0.30015 |  0.39686 |  1.45054\n",
+      "    9 |     140 |  0.229388258 |  0.374270117 |  0.30254 |  0.42601 |  1.61807\n",
+      "   10 |     150 |  0.229388258 |  0.373933647 |  0.30242 |  0.44002 |  1.70848\n",
       "Best solution found: \n",
-      "X = [0.52575679 0.65999627 0.65540969 0.48303056 0.96943187 0.78243048\n",
-      " 0.35731446 0.42159602 0.26088296 0.52906313]\n",
-      "F = [0.43536358]\n"
+      "X = [0.48607456 0.53766803 0.56779226 0.44460432 0.43884118 0.57589736\n",
+      " 0.37938045 0.1263826  0.26892292 0.44455163]\n",
+      "F = [0.22938826]\n"
      ]
     }
    ],
@@ -132,15 +134,11 @@
       "==============================================================================\n",
       "n_gen |  n_eval |     fopt     |    sigma     | min std  | max std  |   axis  \n",
       "==============================================================================\n",
-      "    1 |      10 |  0.693281236 |  0.500000000 |  0.50000 |  0.50002 |  1.00005\n",
-      "    2 |      20 |  0.510635963 |  0.467010358 |  0.44671 |  0.47745 |  1.19477\n",
-      "    3 |      30 |  0.510635963 |  0.436791171 |  0.40501 |  0.44470 |  1.24024\n",
-      "    4 |      40 |  0.510635963 |  0.422510052 |  0.38513 |  0.43316 |  1.28711\n",
-      "    5 |      50 |  0.510635963 |  0.414590098 |  0.37047 |  0.42855 |  1.35280\n",
+      "    1 |      60 |  0.230829022 |  0.500000000 |  0.50000 |  0.50002 |  1.00005\n",
       "Best solution found: \n",
-      "X = [0.00518307 0.70907123 0.53830206 0.64531015 0.16284682 0.36370915\n",
-      " 0.4825207  0.35503139 0.59110102 0.69398715]\n",
-      "F = [0.51063596]\n"
+      "X = [0.39410806 0.31538908 0.76782696 0.38441356 0.42885057 0.43778444\n",
+      " 0.60280162 0.65186544 0.35727118 0.30633172]\n",
+      "F = [0.23082902]\n"
      ]
     }
    ],
@@ -171,8 +169,8 @@
      "output_type": "stream",
      "text": [
       "Best solution found: \n",
-      "X = [ 5.20199958e-06 -4.04980429e-05]\n",
-      "F = [3.3074982e-07]\n"
+      "X = [ 4.50346187e-05 -7.31912594e-05]\n",
+      "F = [1.46514089e-06]\n"
      ]
     }
    ],
@@ -208,8 +206,8 @@
      "output_type": "stream",
      "text": [
       "Best solution found: \n",
-      "X = [-9.94958818e-01 -2.66237603e-07]\n",
-      "F = [0.99495906]\n"
+      "X = [-1.66760792e-07  7.76127578e-08]\n",
+      "F = [6.71107614e-12]\n"
      ]
     }
    ],
@@ -217,9 +215,8 @@
     "import numpy as np\n",
     "from pymoo.util.normalization import denormalize\n",
     "\n",
-    "np.random.seed(1)\n",
-    "\n",
     "# define an intitial point for the search\n",
+    "np.random.seed(1)\n",
     "x0 = denormalize(np.random.random(problem.n_var), problem.xl, problem.xu)\n",
     "\n",
     "algorithm = CMAES(x0=x0,\n",
@@ -228,7 +225,7 @@
     "                 maxfevals=np.inf,\n",
     "                 tolfun=1e-6,\n",
     "                 tolx=1e-6,\n",
-    "                 restart_from_best='False',\n",
+    "                 restart_from_best=True,\n",
     "                 bipop=True)\n",
     "\n",
     "res = minimize(problem,\n",
