--- a/doc/source/algorithms/nelder_mead.ipynb
+++ b/doc/source/algorithms/nelder_mead.ipynb
@@ -23,16 +23,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "code": "algorithms/usage_so_nelder_mead.py"
+    "code": "algorithms/usage_nelder_mead.py"
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.49955771 0.49951863 0.50041486 0.49977682 0.50047266 0.50000158\n",
-      " 0.50030921 0.50048091 0.49992482 0.49986138]\n",
-      "[1.22442015e-06]\n"
+      "[0.49977236 0.49995608 0.50006502 0.50014803 0.50029494 0.50009887\n",
+      " 0.4992701  0.49963783 0.49968202 0.49961358]\n",
+      "[1.09100991e-06]\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
     "\n",
     "problem = get_problem(\"sphere\")\n",
     "\n",
-    "algorithm = NelderMead(n_max_restarts=10)\n",
+    "algorithm = NelderMead()\n",
     "\n",
     "res = minimize(problem,\n",
     "               algorithm,\n",
