--- a/doc/source/algorithms/nsga3.ipynb
+++ b/doc/source/algorithms/nsga3.ipynb
@@ -16,7 +16,7 @@
     "## NSGA-III\n",
     "\n",
     "\n",
-    "The algorithm is implemented in base of <cite data-cite=\"nsga3-part1\"></cite> <cite data-cite=\"nsga3-part2\"></cite> [\\[benchmark\\]](https://www.egr.msu.edu/coinlab/blankjul/pymoo-benchmark/nsga3.html) [\\[data\\]](https://www.egr.msu.edu/coinlab/blankjul/pymoo-benchmark/nsga3.zip). Implementation details of this algorithm can be found in <cite data-cite=\"nsga3-norm\"></cite>. The reference lines that should be used by this algorithm must be defined before it is executed. Commonly, the Das-Dennis method (implemented in UniformReferenceDirectionFactory) is used to sample reference directions uniformly.\n",
+    "The algorithm is implemented in base of <cite data-cite=\"nsga3-part1\"></cite> <cite data-cite=\"nsga3-part2\"></cite> [\\[benchmark\\]](https://www.egr.msu.edu/coinlab/blankjul/pymoo-benchmark/nsga3.html) [\\[data\\]](https://www.egr.msu.edu/coinlab/blankjul/pymoo-benchmark/nsga3.zip). Implementation details of this algorithm can be found in <cite data-cite=\"nsga3-norm\"></cite>. NSGA-III is based on [Reference Directions](../misc/reference_directions.ipynb) which need to be provided when the algorithm is initialized. \n",
     "\n",
     "The survival, first, the non-dominated sorting is done as in NSGA-II. "
    ]
