--- a/doc/source/interface/callback.ipynb
+++ b/doc/source/interface/callback.ipynb
@@ -39,28 +39,28 @@
      "output_type": "stream",
      "text": [
       "=============================================\n",
-      "n_gen |  n_eval |     favg     |     fopt    \n",
+      "n_gen |  n_eval |     fopt     |     favg    \n",
       "=============================================\n",
-      "    1 |     100 |  0.831497479 |  0.387099336\n",
-      "    2 |     200 |  0.578035582 |  0.302189349\n",
-      "    3 |     300 |  0.443801185 |  0.267733594\n",
-      "    4 |     400 |  0.347200983 |  0.188215259\n",
-      "    5 |     500 |  0.272644726 |  0.083479177\n",
-      "    6 |     600 |  0.212567874 |  0.083479177\n",
-      "    7 |     700 |  0.173574163 |  0.072492126\n",
-      "    8 |     800 |  0.140740462 |  0.051256476\n",
-      "    9 |     900 |  0.110370322 |  0.041778020\n",
-      "   10 |    1000 |  0.089125798 |  0.041778020\n",
-      "   11 |    1100 |  0.071339910 |  0.031644566\n",
-      "   12 |    1200 |  0.057941249 |  0.030055810\n",
-      "   13 |    1300 |  0.047786695 |  0.021855327\n",
-      "   14 |    1400 |  0.040676540 |  0.017620999\n",
-      "   15 |    1500 |  0.034902705 |  0.014756395\n",
-      "   16 |    1600 |  0.029778240 |  0.014756395\n",
-      "   17 |    1700 |  0.026185115 |  0.012976416\n",
-      "   18 |    1800 |  0.022664820 |  0.008637920\n",
-      "   19 |    1900 |  0.019648350 |  0.006399439\n",
-      "   20 |    2000 |  0.016725603 |  0.006399439\n"
+      "    1 |     100 |  0.387099336 |  0.831497479\n",
+      "    2 |     200 |  0.302189349 |  0.578035582\n",
+      "    3 |     300 |  0.267733594 |  0.443801185\n",
+      "    4 |     400 |  0.188215259 |  0.347200983\n",
+      "    5 |     500 |  0.083479177 |  0.272644726\n",
+      "    6 |     600 |  0.083479177 |  0.212567874\n",
+      "    7 |     700 |  0.072492126 |  0.173574163\n",
+      "    8 |     800 |  0.051256476 |  0.140740462\n",
+      "    9 |     900 |  0.041778020 |  0.110370322\n",
+      "   10 |    1000 |  0.041778020 |  0.089125798\n",
+      "   11 |    1100 |  0.031644566 |  0.071339910\n",
+      "   12 |    1200 |  0.030055810 |  0.057941249\n",
+      "   13 |    1300 |  0.021855327 |  0.047786695\n",
+      "   14 |    1400 |  0.017620999 |  0.040676540\n",
+      "   15 |    1500 |  0.014756395 |  0.034902705\n",
+      "   16 |    1600 |  0.014756395 |  0.029778240\n",
+      "   17 |    1700 |  0.012976416 |  0.026185115\n",
+      "   18 |    1800 |  0.008637920 |  0.022664820\n",
+      "   19 |    1900 |  0.006399439 |  0.019648350\n",
+      "   20 |    2000 |  0.006399439 |  0.016725603\n"
      ]
     },
     {
@@ -81,15 +81,13 @@
     }
    ],
    "source": [
-    "from pymoo.algorithms.nsga2 import NSGA2\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
     "from pymoo.algorithms.so_genetic_algorithm import GA\n",
     "from pymoo.factory import get_problem\n",
     "from pymoo.model.callback import Callback\n",
     "from pymoo.optimize import minimize\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
     "class MyCallback(Callback):\n",
@@ -104,18 +102,20 @@
     "\n",
     "problem = get_problem(\"sphere\")\n",
     "\n",
-    "algorithm = GA(pop_size=100, callback=MyCallback())\n",
+    "algorithm = GA(pop_size=100)\n",
     "\n",
     "res = minimize(problem,\n",
     "               algorithm,\n",
     "               ('n_gen', 20),\n",
     "               seed=1,\n",
+    "               callback=MyCallback(),\n",
     "               save_history=True,\n",
     "               verbose=True)\n",
     "\n",
     "val = res.algorithm.callback.data[\"best\"]\n",
     "plt.plot(np.arange(len(val)), val)\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
