--- a/doc/source/interface/display.ipynb
+++ b/doc/source/interface/display.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Display Custom Output"
+    "## Display"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "An algorithm prints by default some information each generation. However, this might be desired to be modified.\n",
-    "To do that a `Display` object can be passed to the algorithm which overrides the default behavior.\n",
+    "To do that a `Display` object can be passed to the `minimize` function (or also `Algorithm` object) to override the default behavior.\n",
     "\n",
     "For instance:"
    ]
@@ -71,13 +71,24 @@
     "\n",
     "problem = get_problem(\"zdt2\")\n",
     "\n",
-    "algorithm = NSGA2(pop_size=100, display=MyDisplay())\n",
+    "algorithm = NSGA2(pop_size=100)\n",
     "\n",
     "res = minimize(problem,\n",
     "               algorithm,\n",
     "               ('n_gen', 10),\n",
     "               seed=1,\n",
-    "               verbose=True)\n"
+    "               display=MyDisplay(),\n",
+    "               verbose=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To just add some printouts of an algorithm you can inherit your own custom display `MyDisplay` from the algorithm's default `Display` object.\n",
+    "Whereas some algorithms have already a custom implementation for printing purposes, others just use the default single or multi-objective behavior.\n",
+    "For instance, to keep the default output of NSGA2 and simply add the metrics shown above, `MyDisplay` has to inherit from `MultiObjectiveDisplay` and the calling the `super()._do(problem, evaluator, algorithm)` will add the default output."
    ]
   }
  ],
