--- a/doc/source/interface/index.ipynb
+++ b/doc/source/interface/index.ipynb
@@ -6,21 +6,21 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    ".. _nb_misc:"
+    ".. _nb_interface:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Miscellaneous"
+    "## Interface"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Topics which did not directly fit into on of our main categories:"
+    "The interface of `pymoo` is basically the `minimize` method which is used to solve an optimization problem."
    ]
   },
   {
@@ -33,12 +33,12 @@
     ".. toctree::\n",
     "   :maxdepth: 1\n",
     "   \n",
-    "   reference_directions.ipynb\n",
-    "   constraint_handling.ipynb\n",
-    "   decomposition.ipynb\n",
-    "   kktpm.ipynb\n",
-    "   \n",
-    "   "
+    "   minimize.ipynb\n",
+    "   termination.ipynb\n",
+    "   callback.ipynb\n",
+    "   display.ipynb\n",
+    "   result.ipynb\n",
+    "   \n"
    ]
   }
  ],
@@ -63,10 +63,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
