--- a/doc/source/interface/result.ipynb
+++ b/doc/source/interface/result.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Results"
+    "## Result"
    ]
   },
   {
@@ -56,6 +56,7 @@
     "- `res.algorithm` algorithm object\n",
     "- `res.pop` final population object\n",
     "- `res.history` history of algorithm object. (only if `save_history` has been enabled during the algorithm initialization)\n",
+    "- `res.time` the time required to run the algorithm\n",
     "\n",
     "Note, when the `minimize` function is called a deep copy of the algorithm object is created.\n",
     "This ensures that two independent runs with the same algorithm and same random seed have the same results without any side effects.\n",
@@ -97,12 +98,12 @@
     {
      "data": {
       "text/plain": [
-       "(<pymoo.algorithms.so_genetic_algorithm.GA at 0x12589afd0>,\n",
-       " Population([<pymoo.model.individual.Individual object at 0x1259c6190>,\n",
-       "             <pymoo.model.individual.Individual object at 0x1259c6350>,\n",
-       "             <pymoo.model.individual.Individual object at 0x1259c6290>,\n",
-       "             <pymoo.model.individual.Individual object at 0x1259c6650>,\n",
-       "             <pymoo.model.individual.Individual object at 0x1259c6550>],\n",
+       "(<pymoo.algorithms.so_genetic_algorithm.GA at 0x1216fd490>,\n",
+       " Population([<pymoo.model.individual.Individual object at 0x121702950>,\n",
+       "             <pymoo.model.individual.Individual object at 0x1217026d0>,\n",
+       "             <pymoo.model.individual.Individual object at 0x121702810>,\n",
+       "             <pymoo.model.individual.Individual object at 0x1217025d0>,\n",
+       "             <pymoo.model.individual.Individual object at 0x121702790>],\n",
        "            dtype=object))"
       ]
      },
@@ -183,7 +184,7 @@
      "output_type": "stream",
      "text": [
       "===========================================================================\n",
-      "n_gen |  n_eval |   cv (min)   |   cv (avg)   |     favg     |     fopt    \n",
+      "n_gen |  n_eval |   cv (min)   |   cv (avg)   |     fopt     |     favg    \n",
       "===========================================================================\n",
       "    1 |       5 |  1.35027E+02 |  5.47570E+02 |            - |            -\n",
       "    2 |      10 |  1.35027E+02 |  3.16525E+02 |            - |            -\n",
@@ -240,7 +241,7 @@
      "output_type": "stream",
      "text": [
       "===========================================================================\n",
-      "n_gen |  n_eval |   cv (min)   |   cv (avg)   |     favg     |     fopt    \n",
+      "n_gen |  n_eval |   cv (min)   |   cv (avg)   |     fopt     |     favg    \n",
       "===========================================================================\n",
       "    1 |       5 |  1.35027E+02 |  5.47570E+02 |            - |            -\n",
       "    2 |      10 |  1.35027E+02 |  3.16525E+02 |            - |            -\n",
@@ -268,13 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "(array([ 0.75014431,  0.93402157,  0.45981887,  0.45896477,  0.78927933,\n",
-       "         0.10322601,  0.74930314,  0.9085955 ,  0.29361415, 28.77753386,\n",
-       "        13.00285721,  1.93669579,  0.78207866]),\n",
-       " array([-43.6144102]),\n",
-       " array([35.14872283, 23.13415601,  7.72723386, 22.77637934,  5.53068468,\n",
-       "        -1.74185514, 27.070325  , 12.04710206, -0.17410937]),\n",
-       " array([133.43460378]))"
+       "(None, None, None, None)"
       ]
      },
      "execution_count": 8,
