--- a/doc/source/operators/index.ipynb
+++ b/doc/source/operators/index.ipynb
@@ -22,7 +22,8 @@
     "   sampling.ipynb\n",
     "   selection.ipynb\n",
     "   crossover.ipynb\n",
-    "   mutation.ipynb\n"
+    "   mutation.ipynb\n",
+    "   repair.ipynb\n"
    ]
   },
   {
@@ -126,6 +127,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
