--- a/doc/source/operators/repair.ipynb
+++ b/doc/source/operators/repair.ipynb
@@ -46,18 +46,18 @@
      "output_type": "stream",
      "text": [
       "===========================================================================\n",
-      "n_gen |  n_eval |   cv (min)   |   cv (avg)   |     favg     |     fopt    \n",
+      "n_gen |  n_eval |   cv (min)   |   cv (avg)   |     fopt     |     favg    \n",
       "===========================================================================\n",
       "    1 |     200 |  2.36000E+02 |  5.18510E+02 |            - |            -\n",
       "    2 |     400 |  8.40000E+01 |  3.84010E+02 |            - |            -\n",
-      "    3 |     600 |  0.00000E+00 |  2.92455E+02 | -2.25000E+02 |         -225\n",
-      "    4 |     800 |  0.00000E+00 |  2.20655E+02 | -3.29000E+02 |         -433\n",
-      "    5 |    1000 |  0.00000E+00 |  1.45475E+02 | -2.91889E+02 |         -433\n",
-      "    6 |    1200 |  0.00000E+00 |  8.56300E+01 | -3.05600E+02 |         -451\n",
-      "    7 |    1400 |  0.00000E+00 |  4.54400E+01 | -2.92366E+02 |         -489\n",
-      "    8 |    1600 |  0.00000E+00 |  1.31000E+01 | -2.80192E+02 |         -508\n",
-      "    9 |    1800 |  0.00000E+00 |  0.090000000 | -2.81326E+02 |         -543\n",
-      "   10 |    2000 |  0.00000E+00 |  0.00000E+00 | -3.40165E+02 |         -543\n"
+      "    3 |     600 |  0.00000E+00 |  2.92455E+02 |         -225 | -2.25000E+02\n",
+      "    4 |     800 |  0.00000E+00 |  2.20655E+02 |         -433 | -3.29000E+02\n",
+      "    5 |    1000 |  0.00000E+00 |  1.45475E+02 |         -433 | -2.91889E+02\n",
+      "    6 |    1200 |  0.00000E+00 |  8.56300E+01 |         -451 | -3.05600E+02\n",
+      "    7 |    1400 |  0.00000E+00 |  4.54400E+01 |         -489 | -2.92366E+02\n",
+      "    8 |    1600 |  0.00000E+00 |  1.31000E+01 |         -508 | -2.80192E+02\n",
+      "    9 |    1800 |  0.00000E+00 |  0.090000000 |         -543 | -2.81326E+02\n",
+      "   10 |    2000 |  0.00000E+00 |  0.00000E+00 |         -543 | -3.40165E+02\n"
      ]
     }
    ],
@@ -146,24 +146,24 @@
      "output_type": "stream",
      "text": [
       "===========================================================================\n",
-      "n_gen |  n_eval |   cv (min)   |   cv (avg)   |     favg     |     fopt    \n",
+      "n_gen |  n_eval |   cv (min)   |   cv (avg)   |     fopt     |     favg    \n",
       "===========================================================================\n",
       "    1 |     200 |  1.33000E+02 |  5.12335E+02 |            - |            -\n",
       "    2 |     400 |  4.000000000 |  3.66170E+02 |            - |            -\n",
       "    3 |     600 |  4.000000000 |  2.71855E+02 |            - |            -\n",
-      "    4 |     800 |  0.00000E+00 |  1.96435E+02 | -3.12000E+02 |         -348\n",
-      "    5 |    1000 |  0.00000E+00 |  1.20500E+02 | -2.82500E+02 |         -475\n",
-      "    6 |    1200 |  0.00000E+00 |  6.60750E+01 | -2.79250E+02 |         -502\n",
-      "    7 |    1400 |  0.00000E+00 |  2.56200E+01 | -2.96533E+02 |         -516\n"
+      "    4 |     800 |  0.00000E+00 |  1.96435E+02 |         -348 | -3.12000E+02\n",
+      "    5 |    1000 |  0.00000E+00 |  1.20500E+02 |         -475 | -2.82500E+02\n",
+      "    6 |    1200 |  0.00000E+00 |  6.60750E+01 |         -502 | -2.79250E+02\n",
+      "    7 |    1400 |  0.00000E+00 |  2.56200E+01 |         -516 | -2.96533E+02\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    8 |    1600 |  0.00000E+00 |  3.385000000 | -2.77353E+02 |         -516\n",
-      "    9 |    1800 |  0.00000E+00 |  0.00000E+00 | -3.13390E+02 |         -516\n",
-      "   10 |    2000 |  0.00000E+00 |  0.00000E+00 | -3.71565E+02 |         -588\n"
+      "    8 |    1600 |  0.00000E+00 |  3.385000000 |         -516 | -2.77353E+02\n",
+      "    9 |    1800 |  0.00000E+00 |  0.00000E+00 |         -516 | -3.13390E+02\n",
+      "   10 |    2000 |  0.00000E+00 |  0.00000E+00 |         -588 | -3.71565E+02\n"
      ]
     }
    ],
