--- a/doc/source/problems/index.ipynb
+++ b/doc/source/problems/index.ipynb
@@ -45,7 +45,101 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test Problems\n",
+    "## Problems"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
+    ".. _nb_custom_problem:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### User-defined Problems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problems have to be defined and some information have to be provided.\n",
+    "In contrast to other frameworks we do not share the opinion of just defining a problem by a function.\n",
+    "In `pymoo` the problem is defined by a class which also contains some meta data, such as the number of objectives, constraints, lower and upper bounds in the design space and so on."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some important parameters for defining a problem are:\n",
+    "\n",
+    "- `n_var`: Integer value representing the number of design variables\n",
+    "- `n_obj`: Integer value representing the number of objectives\n",
+    "- `n_constr`: Integer value representing the number of constraints\n",
+    "- `xl`: Integer or `np.ndarray` of length `n_var` representing the lower bounds of the design variables.\n",
+    "- `xu`: Integer or `np.ndarray` of length `n_var` representing the upper bounds of the design variables.\n",
+    "\n",
+    "\n",
+    "These attributes are supposed to be defined in the constructor and thus by overriding the `__init__` method."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The actual function evaluation takes place in the `_evaluate` method which has to purpose to fill the `out` dictionary with the corresponding evaluation data. The function values are supposed to be written into `out[\"F\"]`  \n",
+    "and the constraints into `out[\"G\"]`  if `n_constr` is greater than zero. \n",
+    "\n",
+    "The example below shows a modified **Sphere** function with a radial constraint located at the center. The problem consists of 10 design variables, one objective, one constraint and the lower and upper bounds of each variable are in the range of 0 and 1. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from pymoo.model.problem import Problem\n",
+    "\n",
+    "\n",
+    "class SphereWithConstraint(Problem):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super().__init__(n_var=10, n_obj=1, n_constr=1, xl=-0, xu=1)\n",
+    "\n",
+    "    def _evaluate(self, x, out, *args, **kwargs):\n",
+    "        out[\"F\"] = np.sum((x - 0.5) ** 2, axis=1)\n",
+    "        out[\"G\"] = 0.1 - out[\"F\"]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Moreover, we also provide an interface to define a problem by a function. More information about problem definitions are available [here](custom.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
+    ".. _nb_test_problems:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test Problems\n",
     "\n",
     "In the future we are planning to provide a comprehensive overview of problems. So far we have managed to describe a view of them and plot the functions. Please note, that we have used for some problems the descriptions from [here](https://www.sfu.ca/~ssurjano/).\n",
     "\n",
