--- a/doc/source/references.bib
+++ b/doc/source/references.bib
@@ -169,27 +169,6 @@ month={June},}
  keywords = {Pareto set, multicriteria optimization, multiobjective optimization, trade-off curve},
 }
 
-@InProceedings{ref_dirs,
-author="Deb, Kalyanmoy
-and Bandaru, Sunith
-and Seada, Haitham",
-editor="Deb, Kalyanmoy
-and Goodman, Erik
-and Coello Coello, Carlos A.
-and Klamroth, Kathrin
-and Miettinen, Kaisa
-and Mostaghim, Sanaz
-and Reed, Patrick",
-title="Generating Uniformly Distributed Points on a Unit Simplex for Evolutionary Many-Objective Optimization",
-booktitle="Evolutionary Multi-Criterion Optimization",
-year="2019",
-publisher="Springer International Publishing",
-address="Cham",
-pages="179--190",
-isbn="978-3-030-12598-1"
-}
-
-
 @book{multi_objective_book,
  author = {Deb, Kalyanmoy and Kalyanmoy, Deb},
  title = {Multi-Objective Optimization Using Evolutionary Algorithms},
@@ -466,4 +445,31 @@ url="https://doi.org/10.1007/3-540-32494-1_4"
  acmid = {1108843},
  publisher = {MIT Press},
  address = {Cambridge, MA, USA},
+}
+
+
+
+@ARTICLE{ref_dirs,
+author={J. {Blank} and K. {Deb} and Y. {Dhebar} and S. {Bandaru} and H. {Seada}},
+journal={IEEE Transactions on Evolutionary Computation},
+title={Generating Well-Spaced Points on a Unit Simplex for Evolutionary Many-Objective Optimization},
+year={In press},
+volume={},
+number={},
+pages={}
+}
+
+
+
+@article{HARDIN2005174,
+title = "Minimal {Riesz} energy point configurations for rectifiable d-dimensional manifolds",
+journal = "Advances in Mathematics",
+volume = "193",
+number = "1",
+pages = "174 - 204",
+year = "2005",
+issn = "0001-8708",
+doi = "https://doi.org/10.1016/j.aim.2004.05.006",
+author = "D.P. Hardin and E.B. Saff",
+keywords = "Minimal discrete Riesz energy, Best-packing, Hausdorff measure, Rectifiable manifolds, Uniform distribution of points on a sphere, Power law potential",
 }
