--- a/doc/source/algorithms/genetic_algorithm.ipynb
+++ b/doc/source/algorithms/genetic_algorithm.ipynb
@@ -17,7 +17,9 @@
     "\n",
     "This class represents a basic ($\\mu+\\lambda$) genetic algorithm for single-objective problems. The figure below shows the flow of a genetic algorithm in general. In the following, it is explained how *pymoo* does allow to customize the modules.\n",
     "\n",
-    "1) **Initial Population:**: A starting population is sampled in the beginning. In this framework, this can be either a [Sampling](../operators/sampling.ipynb) object, which defines different initial sampling strategies, or [Population](/api/model.html#pymoo.model.population.Population) where the X and F values are set, or a simple numpy array (pop_size x n_var).\n",
+    "1) **Initial Population:**: A starting population is sampled in the beginning. In this framework, this can be either a [Sampling](../operators/sampling.ipynb) object, which defines different initial sampling strategies, or Population where the X and F values are set, or a simple numpy array (pop_size x n_var).\n",
+    "\n",
+    "\n",
     "\n",
     "2) **Evaluation:** It is executed using the problem defined to be solved.\n",
     "\n",
