--- a/doc/source/algorithms/index.ipynb
+++ b/doc/source/algorithms/index.ipynb
@@ -22,6 +22,7 @@
     "   differential_evolution\n",
     "   genetic_algorithm\n",
     "   nelder_mead\n",
+    "   pattern_search\n",
     "   cmaes\n",
     "   nsga2\n",
     "   rnsga2\n",
@@ -51,6 +52,7 @@
     "|[Genetic Algorithm](genetic_algorithm.ipynb)|\"GA\"|\"ga\"\n",
     "|[BRKGA](brkga.ipynb)|\"BRKGA\"|\"brkga\"\n",
     "|[Nelder Mead](nelder_mead.ipynb)|\"NelderMead\"|\"nelder-mead\"\n",
+    "|[Pattern Search](pattern_search.ipynb)|\"PatternSearch\"|\"pattern-search\"\n",
     "|[CMAES](cmaes.ipynb)|\"CMAES\"|\"cmaes\"\n",
     "|[NSGA-II](nsga2.ipynb)|\"NSGA2\"|\"nsga2\"\n",
     "|[RNSGA-II](rnsga2.ipynb)|\"RNSGA2\"|\"rnsga2\"\n",
@@ -105,6 +107,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "metadata": {
+     "collapsed": false
+    },
+    "source": []
+   }
   }
  },
  "nbformat": 4,
