--- a/doc/source/misc/decomposition.ipynb
+++ b/doc/source/misc/decomposition.ipynb
@@ -135,14 +135,14 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    ".. _nb_tchebicheff:"
+    ".. _nb_tchebyshev:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tchebicheff"
+    "### Tchebysheff"
    ]
   },
   {
@@ -408,8 +408,17 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "metadata": {
+     "collapsed": false
+    },
+    "source": []
+   }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
