--- a/doc/source/algorithms/nelder_mead.ipynb
+++ b/doc/source/algorithms/nelder_mead.ipynb
@@ -30,9 +30,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.49977236 0.49995608 0.50006502 0.50014803 0.50029494 0.50009887\n",
+      "Best solution found: \n",
+      "X = [0.49977236 0.49995608 0.50006502 0.50014803 0.50029494 0.50009887\n",
       " 0.4992701  0.49963783 0.49968202 0.49961358]\n",
-      "[1.09100991e-06]\n"
+      "F = [1.09100991e-06]\n"
      ]
     }
    ],
@@ -50,8 +51,7 @@
     "               seed=1,\n",
     "               verbose=False)\n",
     "\n",
-    "print(res.X)\n",
-    "print(res.F)\n"
+    "print(\"Best solution found: \\nX = %s\\nF = %s\" % (res.X, res.F))"
    ]
   },
   {
