--- a/doc/source/interface/display.ipynb
+++ b/doc/source/interface/display.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "An algorithm prints by default some information each generation. However, this might be desired to be modified.\n",
-    "To do that a `Display` object can be passed to the `minimize` function (or also `Algorithm` object) to override the default behavior.\n",
+    "To do that a `Display` object can be passed to the `minimize` function (or also to the `Algorithm` constructor) to override the default behavior.\n",
     "\n",
     "For instance:"
    ]
@@ -78,8 +78,7 @@
     "               ('n_gen', 10),\n",
     "               seed=1,\n",
     "               display=MyDisplay(),\n",
-    "               verbose=True)\n",
-    "\n"
+    "               verbose=True)"
    ]
   },
   {
@@ -108,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
