--- a/doc/source/interface/result.ipynb
+++ b/doc/source/interface/result.ipynb
@@ -98,12 +98,12 @@
     {
      "data": {
       "text/plain": [
-       "(<pymoo.algorithms.so_genetic_algorithm.GA at 0x1216fd490>,\n",
-       " Population([<pymoo.model.individual.Individual object at 0x121702950>,\n",
-       "             <pymoo.model.individual.Individual object at 0x1217026d0>,\n",
-       "             <pymoo.model.individual.Individual object at 0x121702810>,\n",
-       "             <pymoo.model.individual.Individual object at 0x1217025d0>,\n",
-       "             <pymoo.model.individual.Individual object at 0x121702790>],\n",
+       "(<pymoo.algorithms.so_genetic_algorithm.GA at 0x122ea4050>,\n",
+       " Population([<pymoo.model.individual.Individual object at 0x122ea91d0>,\n",
+       "             <pymoo.model.individual.Individual object at 0x122ea95d0>,\n",
+       "             <pymoo.model.individual.Individual object at 0x122ea9590>,\n",
+       "             <pymoo.model.individual.Individual object at 0x122ea9210>,\n",
+       "             <pymoo.model.individual.Individual object at 0x122ea9310>],\n",
        "            dtype=object))"
       ]
      },
