--- a/doc/source/references.bib
+++ b/doc/source/references.bib
@@ -473,3 +473,25 @@ doi = "https://doi.org/10.1016/j.aim.2004.05.006",
 author = "D.P. Hardin and E.B. Saff",
 keywords = "Minimal discrete Riesz energy, Best-packing, Hausdorff measure, Rectifiable manifolds, Uniform distribution of points on a sphere, Power law potential",
 }
+
+
+
+@article{pattern_search,
+author = {Hooke, Robert and Jeeves, T. A.},
+title = {`` Direct Search’’ Solution of Numerical and Statistical Problems},
+year = {1961},
+issue_date = {April 1961},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {8},
+number = {2},
+issn = {0004-5411},
+url = {https://doi.org/10.1145/321062.321069},
+doi = {10.1145/321062.321069},
+journal = {J. ACM},
+month = apr,
+pages = {212–229},
+numpages = {18}
+}
+
+
