--- a/doc/source/customization/initialization.ipynb
+++ b/doc/source/customization/initialization.ipynb
@@ -48,22 +48,22 @@
       "============================================================\n",
       "n_gen |  n_eval |     igd      |      gd      |      hv     \n",
       "============================================================\n",
-      "    1 |     300 |  3.630976687 |  3.776132697 |  0.00000E+00\n",
-      "    2 |     400 |  3.630259816 |  3.752439367 |  0.00000E+00\n",
-      "    3 |     500 |  3.418933759 |  3.753184244 |  0.00000E+00\n",
-      "    4 |     600 |  3.231550622 |  3.253141750 |  0.00000E+00\n",
-      "    5 |     700 |  2.948499804 |  3.112957878 |  0.00000E+00\n",
-      "    6 |     800 |  2.863306628 |  3.027713279 |  0.00000E+00\n",
-      "    7 |     900 |  2.616071760 |  2.966628798 |  0.00000E+00\n",
-      "    8 |    1000 |  2.003671745 |  2.773862398 |  0.00000E+00\n",
-      "    9 |    1100 |  1.698135333 |  2.539436269 |  0.00000E+00\n",
-      "   10 |    1200 |  1.697809742 |  2.399161265 |  0.00000E+00\n"
+      "    1 |     300 |  3.481862151 |  3.891229516 |  0.00000E+00\n",
+      "    2 |     400 |  3.480264729 |  3.657111762 |  0.00000E+00\n",
+      "    3 |     500 |  3.108853324 |  3.668094382 |  0.00000E+00\n",
+      "    4 |     600 |  3.108853324 |  3.137531238 |  0.00000E+00\n",
+      "    5 |     700 |  2.943036924 |  2.936487925 |  0.00000E+00\n",
+      "    6 |     800 |  2.768143770 |  2.607942204 |  0.00000E+00\n",
+      "    7 |     900 |  2.768143770 |  2.565896955 |  0.00000E+00\n",
+      "    8 |    1000 |  2.654621380 |  2.408145325 |  0.00000E+00\n",
+      "    9 |    1100 |  2.326534287 |  2.256206502 |  0.00000E+00\n",
+      "   10 |    1200 |  2.081444601 |  2.208504133 |  0.00000E+00\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<pymoo.model.result.Result at 0x126760f50>"
+       "<pymoo.model.result.Result at 0x1188f1a50>"
       ]
      },
      "execution_count": 1,
@@ -88,9 +88,7 @@
     "         algorithm,\n",
     "         ('n_gen', 10),\n",
     "         seed=1,\n",
-    "         verbose=True)\n",
-    "\n",
-    "\n"
+    "         verbose=True)"
    ]
   },
   {
@@ -114,22 +112,28 @@
       "============================================================\n",
       "n_gen |  n_eval |     igd      |      gd      |      hv     \n",
       "============================================================\n",
-      "    1 |       0 |  3.564541316 |  3.691610570 |  0.00000E+00\n",
-      "    2 |     100 |  3.564541316 |  3.697683560 |  0.00000E+00\n",
-      "    3 |     200 |  3.093660354 |  3.796400408 |  0.00000E+00\n",
-      "    4 |     300 |  2.960831587 |  3.363980086 |  0.00000E+00\n",
-      "    5 |     400 |  2.951726529 |  3.131239167 |  0.00000E+00\n",
-      "    6 |     500 |  2.795768696 |  2.988585578 |  0.00000E+00\n",
-      "    7 |     600 |  2.581943136 |  2.459043404 |  0.00000E+00\n",
-      "    8 |     700 |  2.471446790 |  2.360115523 |  0.00000E+00\n",
-      "    9 |     800 |  2.428839630 |  2.310259426 |  0.00000E+00\n",
-      "   10 |     900 |  2.304383703 |  2.135678386 |  0.00000E+00\n"
+      "    1 |       0 |  3.545092213 |  3.827601216 |  0.00000E+00\n",
+      "    2 |     100 |  3.545092213 |  3.825368934 |  0.00000E+00\n",
+      "    3 |     200 |  3.366254282 |  3.522554883 |  0.00000E+00\n",
+      "    4 |     300 |  2.966148158 |  3.111186346 |  0.00000E+00\n",
+      "    5 |     400 |  2.663611694 |  3.096243735 |  0.00000E+00\n",
+      "    6 |     500 |  2.663611694 |  2.924202265 |  0.00000E+00\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    7 |     600 |  2.372672075 |  2.692961803 |  0.00000E+00\n",
+      "    8 |     700 |  2.372672075 |  2.395526868 |  0.00000E+00\n",
+      "    9 |     800 |  2.146421941 |  2.232161323 |  0.00000E+00\n",
+      "   10 |     900 |  2.016162053 |  2.191762693 |  0.00000E+00\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<pymoo.model.result.Result at 0x118955610>"
+       "<pymoo.model.result.Result at 0x1184f19d0>"
       ]
      },
      "execution_count": 2,
@@ -159,7 +163,7 @@
     "         algorithm,\n",
     "         ('n_gen', 10),\n",
     "         seed=1,\n",
-    "         verbose=True)\n"
+    "         verbose=True)"
    ]
   }
  ],
