--- a/doc/source/misc/reference_directions.ipynb
+++ b/doc/source/misc/reference_directions.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "## Reference Directions\n",
     "\n",
-    "Most evolutionary many-objective optimization (EMaO) algorithms, for instance [NSGA3](../algorithms/nsga3.ipynb) or [MOEAD](../algorithms/moead.ipynb), start with a description of a number of pre-defined set of reference directions on a unit simplex. Reference directions in an $M$-dimensional space are subject to"
+    "Most evolutionary many-objective optimization (EMaO) algorithms, for instance [NSGA3](../algorithms/nsga3.ipynb) or [MOEAD](../algorithms/moead.ipynb), start with a description of a number of predefined set of reference directions on a unit simplex. Reference directions in an $M$-dimensional space are subject to"
    ]
   },
   {
@@ -506,7 +506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
