--- a/doc/source/versions.ipynb
+++ b/doc/source/versions.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "#### 0.4.1\n",
     "\n",
-    "- New Feature: Riesz s-Energy Method to generate a well-spaced point-set of arbitrary size.\n",
+    "- New Feature: Riesz s-Energy Method to generate a well-spaced point-set on the unit simplex (reference directions) of arbitrary size.\n",
     "- New Algorithm: An implementation of Hooke and Jeeves Pattern Search (well-known single-objective algorithm)\n",
     "- New Documentation: We have re-arranged the documentation and explain now the minimize interface in more detail.\n",
     "- New Feature: The problem can be parallelized by directly providing a starmapping callable (Contribution by Josh Karpel).\n",
@@ -196,6 +196,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
